namespace Automotive.Marketplace.Domain.Entities;

public class MakeExclusion
{
    public int VpicId { get; set; }

    public string VpicName { get; set; } = string.Empty;
}
