import { Translation } from "@/types/shared/Translation";

export type BodyType = {
  id: string;
  name: string;
  translations: Translation[];
};
