import { Translation } from "@/types/shared/Translation";

export type Fuel = {
  id: string;
  name: string;
  translations: Translation[];
};
